[gd_scene load_steps=9 format=2]

[ext_resource path="res://projectiles/abstract_projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://projectiles/GloveBallStringController.gd" type="Script" id=2]
[ext_resource path="res://AlphaSpriteFrame.gd" type="Script" id=3]
[ext_resource path="res://complexMovement.gd" type="Script" id=4]
[ext_resource path="res://basicMovement.gd" type="Script" id=5]
[ext_resource path="res://MyTween.gd" type="Script" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
//https://godotshaders.com/shader/wiggle-2d/
uniform float Strength : hint_range(0,20) = 5;
uniform float RandomOffset = 1f;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46 + RandomOffset, -54.3415 ) ) ) );
}

void vertex()
{
	vec2 VERTEX_OFFSET = VERTEX;
	VERTEX_OFFSET.x += (
		random(
			( trunc( VERTEX_OFFSET.y))
		+	TIME
		) - 0.5
	) * Strength ;

	VERTEX_OFFSET.y += (
		random(
			( trunc( VERTEX_OFFSET.x))
		+	TIME
		) - 0.5
	) * Strength;
	
	VERTEX = VERTEX_OFFSET;	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/Strength = 9.301
shader_param/RandomOffset = 1.0

[node name="glove-ball-string" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
supportsReparentingOnDestroy = false
backReelMidPoitnOffset = Vector2( -30, 20 )
airReelMidPoitnOffset = Vector2( -30, -20 )

[node name="SpriteAnimationManager" parent="ProjectileController/ActionAnimationManager" index="0"]
editor/display_folded = false
targetSpritePath = NodePath("../../../../glove-ball-string/active-nodes/Sprite")

[node name="start-up" parent="ProjectileController/ActionAnimationManager/SpriteAnimationManager/SpriteAnimations" index="0"]
isLooping = true

[node name="frame0" type="Node" parent="ProjectileController/ActionAnimationManager/SpriteAnimationManager/SpriteAnimations/start-up" index="0"]
script = ExtResource( 3 )
duration = 0

[node name="frame1" type="Node" parent="ProjectileController/ActionAnimationManager/SpriteAnimationManager/SpriteAnimations/active" index="0"]
script = ExtResource( 3 )
duration = 0

[node name="frame2" type="Node" parent="ProjectileController/ActionAnimationManager/SpriteAnimationManager/SpriteAnimations/completion" index="0"]
script = ExtResource( 3 )
duration = 0

[node name="MovementAnimationManager" parent="ProjectileController/ActionAnimationManager" index="1"]
editor/display_folded = true

[node name="MovementAnimations" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager" index="0"]
editor/display_folded = false

[node name="cplx_mvm0" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations/start-up" index="0"]
script = ExtResource( 4 )
mvmType = 1
gravEffect = 2

[node name="bm0" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations/start-up/cplx_mvm0" index="0"]
script = ExtResource( 5 )
maxSpeed = 1000.0

[node name="cplx_mvm0" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations/active" index="0"]
script = ExtResource( 4 )
mvmType = 1
gravEffect = 2

[node name="bm0" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations/active/cplx_mvm0" index="0"]
script = ExtResource( 5 )
maxSpeed = 1000.0

[node name="cplx_mvm0" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations/completion" index="0"]
script = ExtResource( 4 )
mvmType = 1
gravEffect = 2

[node name="bm0" type="Node" parent="ProjectileController/ActionAnimationManager/MovementAnimationManager/MovementAnimations/completion/cplx_mvm0" index="0"]
script = ExtResource( 5 )

[node name="active-nodes" parent="." index="1"]
z_index = 6

[node name="Sprite" parent="active-nodes" index="1"]
visible = false
texture = null

[node name="bodyBox" parent="." index="2"]
editor/display_folded = true

[node name="stringLine2D" type="Line2D" parent="." index="4"]
material = SubResource( 2 )
points = PoolVector2Array( 0, 0, 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.478431, 0, 0, 0.803922 )
texture_mode = 170812786

[node name="fadeoutTween" type="Node" parent="." index="5"]
script = ExtResource( 6 )
ignoreHitFreeze = false
